--- a/Python Programming/8_ExceptionHandling.ipynb
+++ b/Python Programming/8_ExceptionHandling.ipynb
@@ -156,18 +156,59 @@
     "# Here we are handling the exception which can be done by zero\n",
     "try:\n",
     "    c = a/b; \n",
-    "    print(c)\n",
+    "    print(c)    \n",
     "except : \n",
     "    print(\"You can't divide by Zero\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "71f2d587",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3968793799.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/72/_q59jbdn7sj2yp5__ym344bc0000gn/T/ipykernel_36539/3968793799.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    import traceback.format_exc()\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        a = int(input(\"Enter First Number: \"))\n",
+    "        b = int(input(\"Enter Second Number: \"))\n",
+    "        c = a / b;\n",
+    "        print(c)\n",
+    "        break;\n",
+    "    except: \n",
+    "        # print(sys.exc_info())\n",
+    "        print(traceback.formate_exc())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8dd6ab29",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (419569093.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/72/_q59jbdn7sj2yp5__ym344bc0000gn/T/ipykernel_36539/419569093.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    import traceback.format_exc()\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import traceback.format_exc()"
+   ]
   }
  ],
  "metadata": {
