--- a/Assignment/Python Basics/Assignment_10.ipynb
+++ b/Assignment/Python Basics/Assignment_10.ipynb
@@ -33,16 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "19033038",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (2060070010.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/72/_q59jbdn7sj2yp5__ym344bc0000gn/T/ipykernel_1000/2060070010.py\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    print(\"E\")\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E\n"
      ]
     }
    ],
@@ -66,53 +65,15 @@
     "            for i in k: \n",
     "                f = open( newPath + i, \"w\")\n",
     "        except: \n",
-    "            print(\"E\")\n"
+    "            print(\"E\")\n",
+    "except: \n",
+    "    print(\"E\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40e069a9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eeeedf92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e90f8eea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/akhilsharma/GeekSpace/iNeuron-FSDS/Assignment/Python Basics\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd6bea2c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3b020f9",
+   "id": "ec3a0dc7",
    "metadata": {},
    "outputs": [],
    "source": []
