--- a/Assignment/Python Basics/Assignment_12.ipynb
+++ b/Assignment/Python Basics/Assignment_12.ipynb
@@ -54,15 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "07aac417",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid character '’' (U+2019) (826269734.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    7. How do you obtain a list of Paragraph objects for a Document object that’s stored in a variable\u001b[0m\n\u001b[0m                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '’' (U+2019)\n"
      ]
     }
    ],
